<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">
    <restriction
        android:key="mdm_serial_number"
        android:title="@string/mdm_serial_title"
        android:restrictionType="string"
        android:description="@string/mdm_serial_desc" />

    <restriction
        android:key="mdm_api_key"
        android:title="@string/mdm_api_key_title"
        android:restrictionType="string"
        android:description="@string/mdm_api_key_desc" />

    <restriction
        android:key="mdm_base_url"
        android:title="@string/mdm_base_url_title"
        android:restrictionType="string"
        android:description="@string/mdm_base_url_desc" />

    <restriction
        android:key="mdm_dns_hostname"
        android:title="@string/mdm_dns_hostname_title"
        android:restrictionType="string"
        android:description="@string/mdm_dns_hostname_desc" />
</restrictions>